# Auto.py

app/: build.bat  build.gradle  run.bat  sign.bat
app/src/androidTest/java/mfc/autopy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  build.py
app/src/main/java/mfc/automator/: AccessibilityNode.java  AccessibilityNodeCollection.java  ActionArgument.java  Automaton.java  Device.java  Invoker.java  MethodProxy.java  ReflectTools.java  Selector.java  _Selector.java
app/src/main/java/mfc/autopy/: Entrance.java  MainActivity.java
app/src/main/java/mfc/reflect/: Invoker.java  MethodProxy.java  ReflectUtils.java
app/src/main/python/: automator.py  bridgeutils.py  main.py  push.py
app/src/test/java/mfc/autopy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
